validate logger settings in REST layer, separate task testNetworkTraceNotEnabled to test restricted loggers